# CabanaRigidBody

./: .gitignore  CMakeLists.txt  README.md  automate.py  visualization_paraview.py
docs/: book.toml
docs/src/: SUMMARY.md  function_approximation.md
examples/: CMakeLists.txt  output_only.py  problem_01_freely_translating_rigid_body_2d.cpp  problem_01_freely_translating_rigid_body_2d.py  problem_02_freely_translating_rigid_body_3d.cpp  problem_02_freely_translating_rigid_body_3d.py  problem_03_freely_tranlating_body_frame_equations_rigid_body_3d.cpp  problem_03_freely_tranlating_body_frame_equations_rigid_body_3d.py  problem_04_two_bodies_freely_translating_rigid_body_3d.cpp  problem_04_two_bodies_freely_translating_rigid_body_3d.py  problem_06_two_rigid_bodies_colliding_3d.cpp  problem_06_two_rigid_bodies_colliding_3d.py
src/: CMakeLists.txt  CabanaRigidBody.hpp  CabanaRigidBody_Force.hpp  CabanaRigidBody_Geometry.hpp  CabanaRigidBody_Integrator.hpp  CabanaRigidBody_Math.hpp  CabanaRigidBody_Particles.hpp
