add_executable(Problem01FreelyTranslatingRigidBody2D problem_01_freely_translating_rigid_body_2d.cpp)
target_link_libraries(Problem01FreelyTranslatingRigidBody2D PRIVATE cabanarigidbody)

add_executable(Problem02FreelyTranslatingRigidBody3D problem_02_freely_translating_rigid_body_3d.cpp)
target_link_libraries(Problem02FreelyTranslatingRigidBody3D PRIVATE cabanarigidbody)

add_executable(Problem03FreelyTranlatingBodyFrameEquationsRigidBody3D problem_03_freely_tranlating_body_frame_equations_rigid_body_3d.cpp)
target_link_libraries(Problem03FreelyTranlatingBodyFrameEquationsRigidBody3D PRIVATE cabanarigidbody)

add_executable(Problem04TwoBodiesFreelyTranslatingRigidBody3D problem_04_two_bodies_freely_translating_rigid_body_3d.cpp)
target_link_libraries(Problem04TwoBodiesFreelyTranslatingRigidBody3D PRIVATE cabanarigidbody)

add_executable(Problem05DzhanibekovEffectRigidBody3D problem_05_Dzhanibekov_effect_rigid_body_3d.cpp)
target_link_libraries(Problem05DzhanibekovEffectRigidBody3D PRIVATE cabanarigidbody)

add_executable(Problem06TwoRigidBodiesColliding3D problem_06_two_rigid_bodies_colliding_3d.cpp)
target_link_libraries(Problem06TwoRigidBodiesColliding3D PRIVATE cabanarigidbody)

install(TARGETS
  Problem01FreelyTranslatingRigidBody2D
  Problem02FreelyTranslatingRigidBody3D
  Problem03FreelyTranlatingBodyFrameEquationsRigidBody3D
  Problem04TwoBodiesFreelyTranslatingRigidBody3D
  Problem05DzhanibekovEffectRigidBody3D
  Problem06TwoRigidBodiesColliding3D
  DESTINATION ${CMAKE_INSTALL_BINDIR})

add_definitions(-w)
